Upgrade runtime to Java 25 and add the Maven wrapper